--- a/jupiterdescription.html
+++ b/jupiterdescription.html
@@ -876,7 +876,7 @@ body{
     <header class="header">
         <div class="container">
             <div class="header-logo-wrapper">
-                <img src="/assets/logo.png" alt="" class="header-logo">
+                <img src="assets/logo.png" alt="" class="header-logo">
             </div>
             <div class="nav-header-wrapper">
                     <ul class="ul-header">
@@ -890,7 +890,7 @@ body{
             <div class="main-info-wrapper">
                 <div class="main-info">
                     <div class="clay-img-wrapper">
-                        <img src="/assets/jupiter.png" alt="" class="clay-img">
+                        <img src="assets/jupiter.png" alt="" class="clay-img">
                     </div>
                     <div class="clay-description-wrapper">
                         <div class="no-flex-wrapper">
@@ -964,10 +964,10 @@ body{
                     </ul>
                     <div class="footer-contact-imgs">
                     <div class="telegram-img-wrapper">
-                        <a href=" https://t.me/goncharnya_kolovert"><img src="/assets/telegram.svg" alt="" class="telegram-img"></a>
+                        <a href=" https://t.me/goncharnya_kolovert"><img src="assets/telegram.svg" alt="" class="telegram-img"></a>
                     </div>
                      <div class="vk-img-wrapper">
-                       <a href="https://vk.com/goncharnya_kolovert"><img src="/assets/vk.svg" alt="" class="vk-img"></a> 
+                       <a href="https://vk.com/goncharnya_kolovert"><img src="assets/vk.svg" alt="" class="vk-img"></a> 
                     </div>
                 </div>
                 </div>
