--- a/jupiterdescription.html
+++ b/jupiterdescription.html
@@ -858,10 +858,10 @@ body{
   .clay-data-table th,
   .clay-data-table td {
     padding: 10px 6px;
-    font-size: 13px;
+    font-size: 18px;
   }
   .clay-data-table caption {
-    font-size: 16px;
+    font-size: 20px;
     padding-left: 0;
   }
 }
@@ -871,7 +871,7 @@ body{
     .clay-description{
         width: 300px;
     }
-}</style>
+}k</style>
 <body>
     <header class="header">
         <div class="container">
