--- a/index.html
+++ b/index.html
@@ -2128,10 +2128,10 @@ body > .main, body > .container-main {
                     </ul>
                     <div class="footer-contact-imgs">
                     <div class="telegram-img-wrapper">
-                        <a href=" https://t.me/goncharnya_kolovert"><img src="/assets/telegram.svg" alt="" class="telegram-img"></a>
+                        <a href=" https://t.me/goncharnya_kolovert"><img src="assets/telegram.svg" alt="" class="telegram-img"></a>
                     </div>
                      <div class="vk-img-wrapper">
-                       <a href="https://vk.com/goncharnya_kolovert"><img src="/assets/vk.svg" alt="" class="vk-img"></a> 
+                       <a href="https://vk.com/goncharnya_kolovert"><img src="assets/vk.svg" alt="" class="vk-img"></a> 
                     </div>
                 </div>
                 </div>
