--- a/venus.html
+++ b/venus.html
@@ -635,10 +635,6 @@ body{
         user-select: none;
     }
 
-
-
-
-
     .description-main-wrapper {
         margin: 30px 20px 0 20px;
         text-align: center;
@@ -684,8 +680,6 @@ body{
     margin-left: 40px;
 }
 
-
-
 }
 
 @media (max-width: 500px) {
@@ -694,14 +688,14 @@ body{
         align-items: center;
     }
 }
-        
+
+
+
 @media(max-width: 368px){
   .order-form{
     height: 730px;
   }
-}
-
-</style>
+}</style>
 </head>
 <body>
     <header class="header">
