--- a/jupiterdescription.html
+++ b/jupiterdescription.html
@@ -871,7 +871,7 @@ body{
     .clay-description{
         width: 300px;
     }
-}k</style>
+}</style>
 <body>
     <header class="header">
         <div class="container">
@@ -880,7 +880,7 @@ body{
             </div>
             <div class="nav-header-wrapper">
                     <ul class="ul-header">
-                        <li class="li-header" id="scroll-to-about"><a class="no-style-link"  href="/website/main page/index.html">назад</a></li>
+                        <li class="li-header" id="scroll-to-about"><a class="no-style-link"  href="index.html">назад</a></li>
                     </ul>
             </div>
         </div>
