--- a/jupiterdescription.html
+++ b/jupiterdescription.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/website/aboutpage/jupiter description/jupiterdescription.css">
 </head>
-<style>*{
+<style>
+    *{
     margin: 0;
     padding: 0;
 }
@@ -867,11 +868,17 @@ body{
 }
 
 
-@media(max-width: 388px){
+@media(max-width: 458px){
     .clay-description{
         width: 300px;
     }
-}</style>
+
+    .clay-description-wrapper{
+        display: flex;
+        justify-content: center;
+    }
+}
+</style>
 <body>
     <header class="header">
         <div class="container">
