--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@ html, body {
   margin-bottom: 0;
   padding-top: 0;
   box-sizing: border-box;
-  background: url('assets/background.jpeg') center center/cover no-repeat;
+  background: url('/assets/background.jpeg') center center/cover no-repeat;
   position: relative;
   z-index: 1;
 }
@@ -1902,6 +1902,19 @@ body > .main, body > .container-main {
     text-align: justify; 
     word-break: break-word;
     hyphens: auto;
+  }
+}
+
+
+@media(max-width: 419px){
+  .conditions-button{
+    margin-top: 30px;
+  }
+}
+
+@media(max-width: 388px){
+  .conditions-button{
+    margin-top: 60px;
   }
 }</style>
 </head>
