--- a/index.html
+++ b/index.html
@@ -1908,7 +1908,7 @@ body > .main, body > .container-main {
 
 @media(max-width: 419px){
   .conditions-button{
-    margin-top: 30px;
+    margin-top: 60px;
   }
 }
 
@@ -1916,7 +1916,9 @@ body > .main, body > .container-main {
   .conditions-button{
     margin-top: 60px;
   }
-}</style>
+}
+
+</style>
 </head>
 <body>
     <header class="header">
